--- a/style.css
+++ b/style.css
@@ -16,6 +16,74 @@
     font-display: swap;
 }
 
+html {
+    height: 100%;
+}
+
 body {
+    min-height: 100%;
+    font-family: "Montserrat", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    color: #533738;
     background-color: #efe6e4;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.page_header {
+    height: 1400px;
+    min-width: 715px;
+    background-image: url(images/header_back.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.link {
+    text-decoration: none;
+    color: #533738;
+}
+
+.logo {
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.header_navigation_list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header_navigation_item {
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.header_navigation a:last-child {
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.h2-title {
+    font-size: 50px;
+    line-height: 62px;
+}
+
+.button_request {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    background-color: #CC8B86;
+    ;
 }
