--- a/style.css
+++ b/style.css
@@ -75,9 +75,10 @@ body {
     line-height: 19px;
 }
 
-.h2-title {
+.header_h2-title {
     font-size: 50px;
     line-height: 62px;
+    text-transform: uppercase;
 }
 
 .button_request {
@@ -85,5 +86,57 @@ body {
     font-size: 20px;
     line-height: 24px;
     background-color: #CC8B86;
-    ;
+}
+
+.main_h2-title {
+    font-size: 40px;
+    line-height: 50px;
+    text-transform: uppercase;
+}
+
+.about-us_advantages {
+    color: #ffffff;
+    background-color: #8d7370;
+    text-transform: uppercase;
+}
+
+.first-image_container {
+    width: 488px;
+    height: 451px;
+    color: #ffffff;
+    background-image: url(images/work_1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.our-works_title {
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 36px;
+}
+
+.our-works_more {
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 36px;
+}
+
+.team_list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.request {
+    color: #ffffff;
+    background-color: #8d7370;
+}
+
+.aside_button {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: #533738;
+    background: #CC8B86;
+    border: none;
 }
